# vslingo

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  speech.py  video.py  voice.py  writing.py
backend/app/core/: config.py
backend/app/domain/: __init__.py  errors.py  feedback.py  history.py  models.py  ports.py  speech.py  video.py  voice_protocol.py  writing.py
backend/app/prompts/: __init__.py  voice.py  writing.py
backend/app/providers/: __init__.py  aws_polly.py  edge_speech.py  fakes.py  openrouter_chat.py  openrouter_feedback.py  openrouter_stt.py  openrouter_writing.py  readiness.py  smoke.py  youtube_transcript.py
backend/app/services/: __init__.py  correction.py  speech.py  video.py
backend/app/voice/: accumulator.py  session.py  tts_queue.py
backend/tests/: test_accumulator.py  test_aws_polly.py  test_config.py  test_edge_speech.py  test_fake_providers.py  test_health.py  test_openrouter_stt.py  test_openrouter_writing.py  test_provider_smokes.py  test_speech.py  test_tts_queue.py  test_video.py  test_video_url.py  test_voice_feedback_domain.py  test_voice_history.py  test_voice_prompts.py  test_voice_protocol.py  test_voice_session.py  test_voice_streaming_tts.py  test_writing.py  test_youtube_transcript.py
docs/: implementation-plan.md  product-spec.md  progress.md
docs/contracts/: voice-protocol-v1.json
frontend/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
(+56 files in other folders)
