[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vslingo-backend"
version = "0.1.0"
description = "Async API and voice orchestration for VSLingo Public Alpha"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.43.54",
    "edge-tts==7.2.8",
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "pydantic-settings==2.14.2",
    "uvicorn[standard]==0.51.0",
]

[project.scripts]
vslingo-api = "app.main:run"
vslingo-smoke = "app.providers.smoke:main"

[dependency-groups]
dev = [
    "mypy==2.3.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "respx==0.23.1",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "live: opt-in smoke tests that call paid or remote providers",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "edge_tts.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
